# Gazelle

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/pachyderm/bazel-poc
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

# Cross-compiling

load("//:platforms.bzl", "register_platforms")

register_platforms()

# Go lint

load("@io_bazel_rules_go//go:def.bzl", "nogo")

nogo(
    name = "govet",
    vet = True,
    visibility = ["//visibility:public"],
)
