load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "ip_lib",
    srcs = ["__init__.py"],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = ["@pip_requests//:pkg"],
)

py_binary(
    name = "ip",
    srcs = ["__main__.py"],
    imports = ["../.."],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [":ip_lib"],
)
