load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "ip_lib",
    srcs = ["__init__.py"],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = ["@pip_requests//:pkg"],
)

py_binary(
    name = "ip",
    srcs = ["__main__.py"],
    imports = ["../.."],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [":ip_lib"],
)

py_test(
    name = "ip_test",
    srcs = ["__test__.py"],
    imports = ["../.."],
    main = "__test__.py",
    deps = [":ip_lib"],
)
