load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go-echo_lib",
    srcs = ["main.go"],
    importpath = "github.com/pachyderm/bazel-poc/go/cmd/go-echo",
    visibility = ["//visibility:private"],
    deps = [
        "//protos",
        "@com_github_jrockway_opinionated_server//server",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "go-echo",
    embed = [":go-echo_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "container",
    binary = ":go-echo",
)
