load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@local_k8s_object//:defaults.bzl", "local_k8s_object")

go_library(
    name = "go-echo_lib",
    srcs = ["main.go"],
    importpath = "github.com/pachyderm/bazel-poc/go/cmd/go-echo",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/hello",
        "//protos:hello_go_proto",
        "@com_github_jrockway_opinionated_server//server",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "go-echo",
    embed = [":go-echo_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
    x_defs = {"github.com/jrockway/opinionated-server/server.AppVersion": "{STABLE_GIT_COMMIT}"},
)

go_image(
    name = "container",
    binary = ":go-echo",
    visibility = ["//visibility:public"],
)

local_k8s_object(
    name = "deployment",
    images = {
        "go-echo:latest": ":container",
    },
    kind = "deployment",
    template = ":deployment.yaml",
    visibility = ["//visibility:public"],
)
